--- a/themes/unrealised/assets/css/responsive.css
+++ b/themes/unrealised/assets/css/responsive.css
@@ -84,4 +84,8 @@
         padding: 0rem 0.5rem;
         display: block;
     }
+
+    .nav-wrapper .nav-item:first-child {
+        padding-top: 0;
+    }
 }
